tests/backends/type_array_06.isa
// RUN: not %aslrun --runtime-checks %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

var R : array [3] of Bits(32);

function FUT(i : Integer, x : Bits(32))
begin
    R[i] := x;
end

function main() -> Integer
begin
    FUT(-1, Std::Bits::Zero(32));
    // CHECK: Evaluation error: assertion failure

    return 0;
end
